--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -1,5 +1,5 @@
 <tui-loader size="xl" [showLoader]="load" [overlay]="true">
-<div class=" body">
+<div class="container body">
   <mat-tab-group>
     <!-- First tab -->
     <mat-tab label="Apply">
